--- a/app/templates/base/base.html
+++ b/app/templates/base/base.html
@@ -61,6 +61,9 @@
             <li class="active">Dashboard</li>
           </ol>
         </section>
+    
+        <!-- Errors -->
+        {% include 'base/errors.html' %}
 
         <!-- Main content -->
         <section class="content">
