--- a/app/templates/base/sidebar.html
+++ b/app/templates/base/sidebar.html
@@ -25,13 +25,22 @@
     <!-- sidebar menu: : style can be found in sidebar.less -->
     <ul class="sidebar-menu">
       <li class="header">MAIN NAVIGATION</li>
-      <li class="active treeview">
+      <li class="treeview">
         <a href="#">
           <i class="fa fa-dashboard"></i> <span>Products</span> <i class="fa fa-angle-left pull-right"></i>
         </a>
         <ul class="treeview-menu">
           <li><a href="{{ url_for("product.list")}}"><i class="fa fa-circle-o"></i> List</a></li>
           <li><a href="{{ url_for("product.create_product")}}"><i class="fa fa-circle-o"></i> Create</a></li>
+        </ul>
+      </li>
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-dashboard"></i> <span>Clients</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="{{ url_for("clients.list")}}"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a href="{{ url_for("clients.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
         </ul>
       </li>
     </ul>
