--- a/app/templates/helpers/_formhelper.html
+++ b/app/templates/helpers/_formhelper.html
@@ -59,6 +59,40 @@
     {% endfor %}
 {%- endmacro %}
 
+
+
+{% macro render_field_list(field) -%}
+    <div style="padding:5px; margin:5px; border:1px solid #ddd; background: #eee">
+        {% for f in field.entries %}
+            {% if f.type == 'BooleanField' %}
+                {{ render_checkbox_field(f) }}
+            {% elif f.type == 'RadioField' %}
+                {{ render_radio_field(f) }}
+            {% elif f.type == 'FormField' %}
+                {{ render_form_field(f) }}
+            {% else %}
+                {{ render_field(f) }}
+            {% endif %}
+        {% endfor %}
+    </div>
+{%- endmacro %}
+
+
+
+{% macro render_form_field(form) -%}
+    {% for f in form %}
+        {% if f.type == 'BooleanField' %}
+            {{ render_checkbox_field(f) }}
+        {% elif f.type == 'RadioField' %}
+            {{ render_radio_field(f) }}
+        {% elif f.type == 'FieldList' %}
+            {{ render_field_list(f) }}
+        {% else %}
+            {{ render_field(f) }}
+        {% endif %}
+    {% endfor %}
+{%- endmacro %}
+
 {# Renders WTForm in bootstrap way. There are two ways to call function:
      - as macros: it will render all field forms using cycle to iterate over them
      - as call: it will insert form fields as you specify:
@@ -76,7 +110,6 @@
         class_ - sets a class for form
     #}
 {% macro render_form(form, action_url='', action_text='Submit', class_='', btn_class='btn btn-default') -%}
-
     <form method="POST" action="{{ action_url }}" role="form" class="{{ class_ }}">
         <div class="box-body">
             {{ form.hidden_tag() if form.hidden_tag }}
@@ -85,6 +118,10 @@
                     {{ render_checkbox_field(f) }}
                 {% elif f.type == 'RadioField' %}
                     {{ render_radio_field(f) }}
+                {% elif f.type == 'FieldList' %}
+                    {{ render_field_list(f) }}
+                {% elif f.type == 'FormField' %}
+                    {{ render_form_field(f) }}
                 {% else %}
                     {{ render_field(f) }}
                 {% endif %}
