This is how we should do it, form.populate_obj(client) does all the dirty work for us, but only if we use classes. Simple skeleton for this in this commit

--- a/app/templates/clients/list.html
+++ b/app/templates/clients/list.html
@@ -34,7 +34,7 @@
                                     <td>
                                         {% for phone in client.phones %}
                                             {% if phone.phone %}
-                                                {{ phone.phone }}
+                                                {{ phone.phone }},
                                             {% endif %}
                                         {% endfor %}
                                     </td>
