Init, AJAX load for selectize.js, modified some utils functions, added NoValidateSelectField for selectize.js purpose

--- a/app/templates/clients/list.html
+++ b/app/templates/clients/list.html
@@ -33,7 +33,7 @@
                                     <td> {{client.email}} </td>
                                     <td>
                                         {% for phone in client.phones %}
-                                            {{ phone }}
+                                            {{ phone.phone }}
                                                 {% if not loop.last %}
                                                     {{','}}
                                                 {% endif %}
