--- a/app/templates/base/sidebar.html
+++ b/app/templates/base/sidebar.html
@@ -43,6 +43,16 @@
           <li><a href="{{ url_for("clients.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
         </ul>
       </li>
+
+      <li class="treeview">
+        <a href="#">
+          <i class="fa fa-dashboard"></i> <span>Orders</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+        <ul class="treeview-menu">
+          <li><a href="{{ url_for("orders.list")}}"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a href="{{ url_for("orders.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
+        </ul>
+      </li>
     </ul>
   </section>
 </aside>
