--- a/app/templates/helpers/_formhelper.html
+++ b/app/templates/helpers/_formhelper.html
@@ -62,7 +62,7 @@
 
 
 {% macro render_field_list(field) -%}
-    <div style="padding:5px; margin:5px; border:1px solid #ddd; background: #eee">
+    <div class="field_list" style="padding:5px; margin:5px;">
         {% for f in field.entries %}
             {% if f.type == 'BooleanField' %}
                 {{ render_checkbox_field(f) }}
