--- a/app/templates/base/sidebar.html
+++ b/app/templates/base/sidebar.html
@@ -52,6 +52,7 @@
         <ul class="treeview-menu">
           <li><a href="{{ url_for("orders.list")}}"><i class="fa fa-circle-o"></i> List</a></li>
           <li><a href="{{ url_for("orders.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
+          <li><a href="{{ url_for("orders.my_orders")}}"><i class="fa fa-circle-o"></i>My orders</a></li>
         </ul>
       </li>
     </ul>
