--- a/app/templates/orders/create.html
+++ b/app/templates/orders/create.html
@@ -135,7 +135,7 @@
 
 
     <script>
-        $('#client').selectize({
+        /*$client_input = $('#client').selectize({
         valueField: 'id',
         labelField: 'label',
         searchField: 'name',
@@ -156,8 +156,8 @@
             }
         }
     });
-
-    $inputs = $("select[name^='products'").selectize({
+*/
+    /*$inputs = $("select[name^='products'").selectize({
         valueField: 'id',
         labelField: 'name',
         searchField: 'name',
@@ -167,29 +167,32 @@
         option: function(item, escape) {
             return '<div>' +
                     '<span class="title">' +
-                        '<span class="name"><i class="glyphicon glyphicon-user" style="color:#bbb;"></i> ' + escape(item.name) + ' Price:'+ escape(item.price['py/id']) + 'PLN</span>' +
+                        '<span class="name"><i class="glyphicon glyphicon-user" style="color:#bbb;"></i> ' + escape(item.name) + ' Price:'+ escape(item.string_price) + 'PLN</span>' +
                     '</span>' +
                     '<ul class="meta">' +
                         '<li class="language">ID: ' + escape(item.id) + '</li>' +
-                        '<li class="language">Price: ' + escape(item.price['py/id']) + 'PLN </li>' +
+                        '<li class="language">Price: ' + escape(item.string_price) + 'PLN </li>' +
                     '</ul>' +
                 '</div>';
             }
         }
     });
-
+*/
+    var products_choices = {{ product_choices | safe }}
+    $inputs = $("select[name^='products'");
     $inputs.each(function(index, value){
         $(this).on('change', function(){
             $input_price = $(this).parent().next().find('input');
             $input_quantity = $(this).parent().next().next().find('input');
-            $input_price.val($inputs[index].selectize.options[value.value].price['py/id']);
+            console.log($(this).val());
+            $input_price.val(products_choices[$(this).val()].price);
             if ($input_quantity.val() == '') {
                 $input_quantity.val(1);
             };
         });
     });
 
-
+    // $client_input.selectize.setValue("{{ form.client}}")
 </script>
 {% endblock %}
 
