--- a/app/templates/clients/list.html
+++ b/app/templates/clients/list.html
@@ -6,12 +6,14 @@
                 <div class="box-header">
                     <h3 class="box-title">Lista klientów</h3>
                     <div class="box-tools">
-                        <div class="input-group input-group-sm" style="width: 150px;">
-                            <input type="text" name="table_search" class="form-control pull-right" placeholder="Search">
-                            <div class="input-group-btn">
-                                <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                        <form method="GET">
+                            <div class="input-group input-group-sm" style="width: 150px;">
+                                <input type="text" name="query" class="form-control pull-right" placeholder="Search">
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
                 <!-- /.box-header -->
