--- a/app/templates/clients/create.html
+++ b/app/templates/clients/create.html
@@ -81,5 +81,12 @@
         a.delete:hover{
             opacity: 1;
         }
+        .field_list:before {
+            content: "";
+            display: block;
+            border-top:1px solid #ddd;
+            padding: 20px 0;
+            width: 90%;
+        }
     </style>
 {% endblock %}
