--- a/app/templates/clients/list.html
+++ b/app/templates/clients/list.html
@@ -8,7 +8,7 @@
                     <div class="box-tools">
                         <form method="GET">
                             <div class="input-group input-group-sm" style="width: 150px;">
-                                <input type="text" name="query" class="form-control pull-right" placeholder="Search">
+                                <input type="text" name="query" value="{{query}}" class="form-control pull-right" placeholder="Search">
                                 <div class="input-group-btn">
                                     <button type="submit" class="btn btn-default"><i class="fa fa-search"></i></button>
                                 </div>
