--- a/app/templates/users/list.html
+++ b/app/templates/users/list.html
@@ -1,10 +1,10 @@
 {% extends "base/base.html" %}
 {% block main_content %}
-    <div class="row">
+  <div class="row">
         <div class="col-xs-12">
             <div class="box">
                 <div class="box-header">
-                    <h3 class="box-title">Responsive Hover Table</h3>
+                    <h3 class="box-title">Users list</h3>
                     <div class="box-tools">
                         <form method="GET">
                             <div class="input-group input-group-sm" style="width: 150px;">
@@ -22,31 +22,20 @@
                         <tbody>
                             <tr>
                                 <th>ID</th>
-                                <th>Name</th>
-                                <th>price</th>
-                                <th>Description</th>
-                                <th>Status</th>
+                                <th>Userame</th>
                                 <th>Edit</th>
                                 <th>Delete</th>
                             </tr>
-                            {% for product in products %}
+                            {% for user in users %}
                                 <tr>
-                                    <td>{{product.id}}</td>
-                                    <td>{{product.name}}</td>
-                                    <td>{{product.price}}</td>
-                                    <td>{{product.description}}</td>
-                                    <td>
-                                    {% if not product.deleted %}
-                                        <span class="label label-success">Active</span>
-                                    {% else %}
-                                        <span class="label label-danger">Deleted</span>
-                                    {% endif %}</td>
-                                    <td><a href="{{url_for("product.edit", id=product.id)}}" class="btn btn-warning">Edit</a></td>
-                                    <td><a href="{{url_for("product.delete", id=product.id)}}" class="btn btn-danger">Delete</a></td>
+                                    <td> {{user.id}} </td>
+                                    <td> {{user.username}} </td>
+                                    <td><a href="{{url_for("users.edit", id=user.id)}}" class="btn btn-warning">Edit</a></td>
+                                    <td><a href="{{url_for("users.delete", id=user.id)}}" class="btn btn-danger">Delete</a></td>
                                 </tr>
                             {% else %}
                             <tr>
-                                <td>Brak produktów</td>
+                                <td>No users defined</td>
                             </tr>
                             {% endfor %}
                         </tbody>
@@ -58,3 +47,5 @@
         </div>
     </div>
 {% endblock %}
+
+
