Statuses and minor fixes

--- a/app/templates/base/sidebar.html
+++ b/app/templates/base/sidebar.html
@@ -65,6 +65,16 @@
           <li><a href="{{ url_for("users.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
         </ul>
       </li>
+
+     <li class="treeview">
+        <a href="#">
+          <i class="fa fa-dashboard"></i> <span>Statuses</span> <i class="fa fa-angle-left pull-right"></i>
+        </a>
+      <ul class="treeview-menu">
+          <li><a href="{{ url_for("statuses.list")}}"><i class="fa fa-circle-o"></i> List</a></li>
+          <li><a href="{{ url_for("statuses.create")}}"><i class="fa fa-circle-o"></i> Create</a></li>
+        </ul>
+      </li>
     </ul>
   </section>
 </aside>
